# cpu-graphics-engine

./: .clang-tidy  .gitignore  BMPWriter_8h_source.html  CMakeLists.txt  Color_8h_source.html  Doxyfile  ImageWriter_8h_source.html  Image_8h_source.html  JsonSceneParser_8h_source.html  LSystem2DParser_8h_source.html  LSystem2D_8h_source.html  LineDrawingParser_8h_source.html  LineDrawing_8h_source.html  Line_8h_source.html  MathUtils_8h_source.html  Matrix_8h_source.html  Projector_8h_source.html  README.md  SceneObjectParser_8h_source.html  SceneObject_8h_source.html  SceneParser_8h_source.html  Scene_8h_source.html  Transform_8h_source.html  Vec3_8h_source.html  annotated.html  classBMPWriter-members.html  classBMPWriter.html  classBMPWriter__inherit__graph.map  classBMPWriter__inherit__graph.md5  classImage-members.html  classImage.html  classImageWriter-members.html  classImageWriter.html  classImageWriter__coll__graph.map  classImageWriter__coll__graph.md5  classImageWriter__inherit__graph.map  classImageWriter__inherit__graph.md5  classImage__coll__graph.map  classImage__coll__graph.md5  classJsonSceneParser-members.html  (+112 more)
.github/workflows/: cd.yml  ci.yml
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_4.js  classes_6.js  classes_7.js  pages_0.js  pages_2.js  searchdata.js
src/: engine.cpp
src/io/input/: SceneParser.h
src/io/input/parsers/: JsonSceneParser.cpp  JsonSceneParser.h
src/io/output/: ImageWriter.h
src/io/output/writers/: BMPWriter.cpp  BMPWriter.h
src/io/parsers/: JsonSceneParser.cpp  JsonSceneParser.h  SceneObjectParser.h  SceneParser.h
src/io/parsers/objects/: LSystem2DParser.cpp  LSystem2DParser.h  LineDrawingParser.cpp  LineDrawingParser.h
src/io/writers/: BMPWriter.cpp  BMPWriter.h  ImageWriter.h
src/math/: MathUtils.h  Matrix.h  Projector.cpp  Projector.h  Transform.h  Vec3.h
src/model/: Color.h  ISceneObject.h  Image.cpp  Image.h  Line.h  Scene.cpp  Scene.h  SceneObject.h
src/model/objects/: LSystem2D.cpp  LSystem2D.h  LineDrawing.cpp  LineDrawing.h
src/parser/: ISceneParser.h  JsonSceneParser.h
test/: scene.json
tests/: MathUtilsTest.cpp  MatrixTest.cpp  ProjectorTest.cpp  SceneObjectTest.cpp  SceneTest.cpp  Vec3Test.cpp  scene.json
tests/resources/: stochastic.json
